Allow exit of mobile nav menu by clicking anywhere Fix gap in background of mobile nav menu

--- a/frontend/src/css/NavBar.css
+++ b/frontend/src/css/NavBar.css
@@ -66,17 +66,17 @@
 @media (max-width: 768px) {
   .nav-links {
     position: absolute;
-    top: 60px;
+    top: 55px;
     right: 0;
     background-color: #0a1930;
     width: 100%;
-    height: calc(100vh - 60px);
+    height: calc(102vh - 55px);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     transform: translateX(100%);
-    transition: transform 0.3s ease;
+    /* opacity: 0; */
   }
 
   .nav-links button {
@@ -87,6 +87,9 @@
 
   .nav-links.open {
     transform: translateX(0);
+    transition: transform 0.3s ease;
+    /* transition: opacity 0.3s ease; */
+    /* opacity: 100; */
   }
 
   .hamburger {
